# TalkTo

./: .continuerules  .gitignore  project-overview.md  pyproject.toml
.history/: .continuerules_20250108210042  .continuerules_20250108210109  .continuerules_20250108210342  .continuerules_20250108210544  .continuerules_20250108210622  .continuerules_20250108210626  .continuerules_20250108210810  .continuerules_20250108210845  .continuerules_20250108210957  .continuerules_20250108211048  .continuerules_20250108211126  .continuerules_20250108211330  project-overview_20250104175528.md  project-overview_20250108205853.md
.prompts/: optimizeCode.prompt.yml
src/: __init__.py  main.py
src/api/: endpoints.py  helpers.py
src/core/: config.py  models.py  services.py
src/utils/: helpers.py
